# log-reasoner

./: Cargo.toml  README.md
backends/: mod.rs  ollama.rs
src/: cli.rs  embedding.rs  grouper.rs  ingest.rs  main.rs  models.rs  output.rs
src/backends/: ollama.rs
