[package]
name = "log-reasoner"
version = "0.1.0"
edition = "2024"

[dependencies]
# For date and time parsing/manipulation
chrono = "0.4.42"

# For regular expression parsing and matching
regex = "1.12.2"

# For ergonomic error handling
anyhow = "1.0.100"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }